# icemet-server

./: CHANGELOG.md  CMakeLists.txt  HELP.md  LICENSE  README.md
CMake/: FindMariaDBConnector.cmake
etc/: icemet-server.yaml
icemet/: config.hpp  database.cpp  database.hpp  file.cpp  file.hpp  hologram.cpp  hologram.hpp  icemet.cpp  icemet.hpp  img.cpp  img.hpp  math.cpp  math.hpp  pkg.cpp  pkg.hpp  worker.cpp  worker.hpp
icemet/core/: config.cpp  config.hpp  database.cpp  database.hpp  file.cpp  file.hpp  math.hpp
icemet/util/: log.cpp  log.hpp  strfmt.hpp  time.cpp  time.hpp  version.cpp  version.hpp
opencl/: icemet_bgsub.cl  icemet_hologram.cl  icemet_math.cl
scripts/: create-opencl-headers.py  mingw-bundledlls.py
server/: analysis.cpp  analysis.hpp  config.cpp  config.hpp  main.cpp  preproc.cpp  preproc.hpp  reader.cpp  reader.hpp  recon.cpp  recon.hpp  saver.cpp  saver.hpp  server.cpp  server.hpp  stats.cpp  stats.hpp  watcher.cpp  watcher.hpp  worker.cpp  worker.hpp
src/: analysis.cpp  analysis.hpp  main.cpp  preproc.cpp  preproc.hpp  reader.cpp  reader.hpp  recon.cpp  recon.hpp  saver.cpp  saver.hpp  stats.cpp  stats.hpp  watcher.cpp  watcher.hpp  worker.cpp  worker.hpp
src/core/: config.cpp  config.hpp  data.cpp  data.hpp  database.cpp  database.hpp  datetime.cpp  datetime.hpp  file.cpp  file.hpp  math.cpp  math.hpp  safequeue.hpp
src/util/: log.cpp  log.hpp  measure.cpp  measure.hpp  sleep.hpp  strfmt.cpp  strfmt.hpp  time.cpp  time.hpp
